[package]
name = "dungeoncrawl"
version = "0.11.0"
edition = "2021"
authors = ["ulphidius"]
readme = "README.md"
description = "tutorial project of hands-on Rust book"
keywords = ["gamedev", "tutorial"]
license-file = "LICENCE.txt"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.8.7"
legion = "~0.3.1"
rand = "0.8.5"
